jumper fix

--- a/custom.css
+++ b/custom.css
@@ -977,7 +977,9 @@ select {
 /* global jumper */
 ts-jumper, ts-jumper.active {
   background-color: rgba(32,32,32,0.6);
+  border: 30px solid var(border-bright);
 }
 ts-jumper ts-jumper-container {
   box-shadow: 0 5px 20px rgba(0,0,0,1);
+  border: 30px solid var(border-bright);
 }
